manifests/kustomize/env/dev-kind/postgres/metadata-grpc-init-container-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-grpc-deployment
spec:
  template:
    spec:
