manifests/kustomize/env/dev-kind/postgres/mlmd-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-grpc-deployment
spec:
  template:
    spec:
      containers:
        - name: container
          args:
            - "--grpc_port=$(METADATA_GRPC_SERVICE_PORT)"
            - "--metadata_source_config_type=postgresql"
            - "--postgres_config_host=$(POSTGRES_HOST)"
            - "--postgres_config_port=$(POSTGRES_PORT)"
            - "--postgres_config_dbname=$(POSTGRES_DBNAME)"
            - "--postgres_config_user=$(POSTGRES_USER)"
            - "--postgres_config_password=$(POSTGRES_PASSWORD)"
            - "--enable_database_upgrade=true"
            - "--grpc_channel_arguments=grpc.max_metadata_size=16384"
